--- a/health.html
+++ b/health.html
@@ -170,11 +170,7 @@
                                   <td style="font-size: 10px;font-family: 宋体;font-weight: bold;">类型:食品</td>
                                 </tr>
                                 <tr>
-<<<<<<< HEAD
-                                  <td style="font-size: 10px;font-family: 宋体;font-weight: bold;word-break: break-all;">编号:海0749210569148222135
-=======
-                                  <td style="font-size: 10px;font-family: 宋体;font-weight: bold;word-break: break-all;">编号:海0749210569108013318
->>>>>>> b4efabb83a138ad4ee06cc7b98d96dfda16da3a4
+                                  <td style="font-size: 10px;font-family: 宋体;font-weight: bold;word-break: break-all;">编号:海0749210200012125613
                                   </td>
                                 </tr>
                                 <tr>
@@ -194,11 +190,7 @@
                                       <tbody>
                                         <tr height="27">
                                           <td><span
-<<<<<<< HEAD
-                                              style="font-family:宋体; font-size:26px;color: #000000;FONT-WEIGHT: bold;">赵朋帅<span
-=======
-                                              style="font-family:宋体; font-size:26px;color: #000000;FONT-WEIGHT: bold;">侯梦虎<span
->>>>>>> b4efabb83a138ad4ee06cc7b98d96dfda16da3a4
+                                              style="font-family:宋体; font-size:26px;color: #000000;FONT-WEIGHT: bold;">朱声剑<span
                                                 style="font-family:宋体; font-size:16px;color: #000000;FONT-WEIGHT: bold;">（男）</span>
                                             </span></td>
                                         </tr>
@@ -208,11 +200,7 @@
                                         </tr>
                                         <tr>
                                           <td><span
-<<<<<<< HEAD
-                                              style="font-family:宋体; font-size:11px;color: #000000;FONT-WEIGHT: bold;">身份证号:4127231999********</span>
-=======
-                                              style="font-family:宋体; font-size:11px;color: #000000;FONT-WEIGHT: bold;">身份证号:3412211992********</span>
->>>>>>> b4efabb83a138ad4ee06cc7b98d96dfda16da3a4
+                                              style="font-family:宋体; font-size:11px;color: #000000;FONT-WEIGHT: bold;">身份证号:3507812000********</span>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -319,11 +307,7 @@
                           <td>
                             <font style="FONT-SIZE: 12px;">姓　名：</font>
                           </td>
-<<<<<<< HEAD
-                          <td><span style="font-family:黑体; font-size:14px;color: #000000;FONT-WEIGHT: bold;"> 赵朋帅</span>
-=======
-                          <td><span style="font-family:黑体; font-size:14px;color: #000000;FONT-WEIGHT: bold;"> 侯梦虎</span>
->>>>>>> b4efabb83a138ad4ee06cc7b98d96dfda16da3a4
+                          <td><span style="font-family:黑体; font-size:14px;color: #000000;FONT-WEIGHT: bold;"> 朱声剑</span>
                           </td>
                         </tr>
                         <tr>
@@ -418,11 +402,7 @@
               姓名
             </td>
             <td colspan="3">
-<<<<<<< HEAD
-              &nbsp;赵朋帅&nbsp;
-=======
-              &nbsp;侯梦虎&nbsp;
->>>>>>> b4efabb83a138ad4ee06cc7b98d96dfda16da3a4
+              &nbsp;朱声剑&nbsp;
             </td>
             <td colspan="2">
               性别
@@ -436,11 +416,7 @@
               身份证号码
             </td>
             <td colspan="8" style="border-right: 1px solid black;">
-<<<<<<< HEAD
-              &nbsp;4127231999********&nbsp;
-=======
-              &nbsp;3412211992********&nbsp;
->>>>>>> b4efabb83a138ad4ee06cc7b98d96dfda16da3a4
+              &nbsp;3507812000********&nbsp;
             </td>
           </tr>
           <tr>
